    (DanielEScherzer)
  . Fixed bug GH-12856 (ReflectionClass::getStaticPropertyValue() returns UNDEF
    zval for uninitialized typed properties). (nielsdos)

- Session:
  . session_start() throws a ValueError on option argument if not a hashmap
    or a TypeError if read_and_close value is not compatible with int.
    (David Carlier)

- SNMP:
  . snmpget, snmpset, snmp_get2, snmp_set2, snmp_get3, snmp_set3 and
    SNMP::__construct() throw an exception on invalid hostname, community
    timeout and retries arguments. (David Carlier)

- SOAP:
  . Fixed bug #49169 (SoapServer calls wrong function, although "SOAP action"
    header is correct). (nielsdos)

- Sockets:
  . Added IPPROTO_ICMP/IPPROTO_ICMPV6 to create raw socket for ICMP usage.
    (David Carlier)
  . Added TCP_FUNCTION_BLK to change the TCP stack algorithm on FreeBSD.
    (David Carlier)
  . socket_set_option() catches possible overflow with SO_RCVTIMEO/SO_SNDTIMEO
    with timeout setting on windows. (David Carlier)
  . Added TCP_FUNCTION_ALIAS, TCP_REUSPORT_LB_NUMA, TCP_REUSPORT_LB_NUMA_NODOM,
    TCP_REUSPORT_LB_CURDOM, TCP_BBR_ALGORITHM constants.
  . socket_create_listen() throws an exception on invalid port value.
    (David Carlier)
  . socket_bind() throws an exception on invalid port value.
    (David Carlier)
  . socket_sendto() throws an exception on invalid port value.
    (David Carlier)
  . socket_addrinfo_lookup throws an exception on invalid hints value types.
    (David Carlier)
  . socket_addrinfo_lookup throws an exception if any of the hints value
    overflows. (David Carlier)
  . socket_addrinfo_lookup throws an exception if one or more hints entries
    has an index as numeric. (David Carlier)
  . socket_set_option with the options MCAST_LEAVE_GROUP/MCAST_LEAVE_SOURCE_GROUP
    will throw an exception if its value is not a valid array/object.
    (David Carlier)
  . socket_getsockname/socket_create/socket_bind handled AF_PACKET family socket.
    (David Carlier)