@@ -124,6 +124,10 @@ PHP                                                                        NEWS
     or a TypeError if read_and_close value is not compatible with int.
     (David Carlier)
 
+- SimpleXML:
+  . Fixed bug GH-12231 (SimpleXML xpath should warn when returning other return
+    types than node lists). (nielsdos)
+
 - SNMP:
   . snmpget, snmpset, snmp_get2, snmp_set2, snmp_get3, snmp_set3 and
     SNMP::__construct() throw an exception on invalid hostname, community
